ntp.drmrs should use dns6001
This was forgotten in the cleanup of all the DRMRS-TODO marks in
puppet, since it's in a seperate repo.  Not very consequential, as
most things don't use this alias for their NTP service anyways
(honestly, I'm not sure that *anything* really does).

Change-Id: I9b61a4f46c4a6872aafaa75fe962ef4679177334

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -163,7 +163,7 @@ ntp.esams           1H  IN CNAME dns3001
 ntp.eqsin           1H  IN CNAME dns5001
 
 ;;; drmrs
-ntp.drmrs           1H  IN CNAME dns1001 ; DRMRS-TODO: should be dns6001 later
+ntp.drmrs           1H  IN CNAME dns6001
 
 ; Round Robin LVS Service records
 
