wikimedia.org: move gitlab from netbox to dns repo
This change adds A, AAAA and PTR records for
gitlab.wikimedia.org. This entry was managed by netbox
before and is managed by dns repo in the future.
Merge of this change is will be timed with with modifications in netbox
(remove hostname, edit description, sre.dns.netbox).

Bug: T307142
Change-Id: Ic8786ca6defa5178cba1bbb59fd5e46002eb09af

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -365,6 +365,8 @@ gerrit-replica    600 IN A        208.80.153.107
 gerrit-replica    600 IN AAAA     2620:0:860:4:208:80:153:107
 
 git             1D IN CNAME dyna.wikimedia.org.
+gitlab 600 IN A 208.80.154.14
+gitlab 600 IN AAAA 2620:0:861:1:208:80:154:14
 gitlab-new 600 IN A 208.80.154.145
 gitlab-new 600 IN AAAA 2620:0:861:2:208:80:154:145
 gitlab-replica 600 IN A 208.80.153.105
