netbox: increase TTL to 1D
This CR should only be merged once we are comfortable to decommission the
old infrastructure netbox(db)?[12]001

Bug: T296452
Change-Id: I24874dd999613b3d8bc665d095d2cec34f72ac51

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -411,9 +411,8 @@ phabricator     1H  IN TXT      "v=spf1 mx ip6:2620:0:861:102:10:64:16:8 ip6:262
 login           1D IN CNAME dyna.wikimedia.org.
 
 librenms        5M  IN CNAME    netmon1002
-; TODO: Set the TTL to 1D after migration
-netbox          5M  IN CNAME    dyna.wikimedia.org.
-netbox-exports  5M  IN CNAME    dyna.wikimedia.org.
+netbox          1D  IN CNAME    dyna.wikimedia.org.
+netbox-exports  1D  IN CNAME    dyna.wikimedia.org.
 
 orchestrator    5M  IN CNAME    dborch1001
 
