switch policy.wikimedia.org back from Wordpress to WMF DNS
This site once was hosted in-house, then moved to external hosting
at Wordpress VIP and is now requested to come back to WMF again.

The new request to turn it into redirects is T310738 but there is
also longstanding ticket T132104 which this would solve as well.

This should go after  I8dc6d27dccfcb5e6 which adds the rewrite rules
to apache config on the appserver cluster.

Also will follow-up with httpbb tests.

Bug: T310738
Bug: T132104
Change-Id: I7e56bc227f8162f1e02882a4c26ea232cfe1bca0

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -427,8 +427,8 @@ people          1D IN CNAME dyna.wikimedia.org.
 
 piwik           1D IN CNAME dyna.wikimedia.org.
 
-; policy.wikimedia.org goes to wordpress cluster T110203
-policy          5M  IN A        192.0.66.2 ; wmf-zone-validator-ignore=MISSING_PTR_FOR_NAME_AND_IP
+; policy.wikimedia.org was once on wordpress cluster T110203, then came back to WMF T310738
+policy           5M IN CNAME dyna.wikimedia.org.
 
 puppetboard      1D IN CNAME dyna.wikimedia.org.
 puppetboard-idptest 1D IN CNAME dyna.wikimedia.org.
