--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -363,6 +363,8 @@ gerrit        600 IN A        208.80.154.137
 gerrit        600 IN AAAA     2620:0:861:2:208:80:154:137
 gerrit-replica    600 IN A        208.80.153.107
 gerrit-replica    600 IN AAAA     2620:0:860:4:208:80:153:107
+gerrit-replica-new    600 IN A        208.80.153.104
+gerrit-replica-new    600 IN AAAA     2620:0:860:4:208:80:153:104
 
 git             1D IN CNAME dyna.wikimedia.org.
 gitlab 300 IN A 208.80.154.145
