wikimedia.org: Add developers.wikimedia.org alias
Bug: T313597
Change-Id: I589d45d0d167ba6e93c42495c0f41b7b85ddf9f3

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -341,6 +341,7 @@ debmonitor      1D IN CNAME dyna.wikimedia.org.
 
 dev             1D IN CNAME dyna.wikimedia.org.
 developer       1D IN CNAME dyna.wikimedia.org.
+developers      1D IN CNAME dyna.wikimedia.org.
 doc             1D IN CNAME dyna.wikimedia.org.
 docker-registry 1D IN CNAME dyna.wikimedia.org.
 docs            1D IN CNAME dyna.wikimedia.org.
