--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -369,6 +369,8 @@ gitlab 300 IN A 208.80.154.145
 gitlab 300 IN AAAA 2620:0:861:2:208:80:154:145
 gitlab-replica 600 IN A 208.80.154.15
 gitlab-replica 600 IN AAAA 2620:0:861:1:208:80:154:15
+gitlab-replica-new 600 IN A 208.80.153.8
+gitlab-replica-new 600 IN AAAA 2620:0:860:1:208:80:153:8
 graphite        1D IN CNAME dyna.wikimedia.org.
 graphite-labs   1D IN CNAME dyna.wikimedia.org.
 grafana         1D IN CNAME dyna.wikimedia.org.
