--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -52,6 +52,10 @@ $ORIGIN eqiad1.wikimediacloud.org.
 ; Service aliases
 ; Primary openstack endpoint API used by openstack clients and endpoint catalog
 openstack  5M  IN CNAME  cloudcontrol1006.wikimedia.org.
+; Rabbitmq nodes
+rabbitmq01 5M  IN CNAME  cloudrabbit1001.wikimedia.org.
+rabbitmq02 5M  IN CNAME  cloudrabbit1002.wikimedia.org.
+rabbitmq03 5M  IN CNAME  cloudrabbit1003.wikimedia.org.
 
 nat.cloudgw         5M  IN A      185.15.56.1
 virt.cloudgw        5M  IN A      185.15.56.237
