wikimedia-org: add soundlogo.wm.org
Bug: T314626
Change-Id: I1b80c555a10ca3079bb7754634328f41a50f0ca5

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -663,6 +663,7 @@ transparency-archive 1D IN CNAME dyna.wikimedia.org.
 search           1D IN CNAME dyna.wikimedia.org.
 shop             1D IN CNAME dyna.wikimedia.org.
 smokeping        5M IN CNAME netmon1002
+soundlogo        1H IN CNAME wikimediasoundlogo.go-vip.net.
 store            1H  IN CNAME    c.ssl.shopify.com.
 static-bugzilla  1D IN CNAME dyna.wikimedia.org.
 static-codereview  1D IN CNAME dyna.wikimedia.org.
