--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -137,6 +137,7 @@ frbast-codfw    1H  IN A    208.80.152.231
 frdata-eqiad    1H  IN A    208.80.155.16
 frdata-codfw    1H  IN A    208.80.152.237
 frdev-eqiad     1H  IN A    208.80.155.13
+frdev-new-eqiad     1H  IN A    208.80.155.14
 frmon-eqiad     1H  IN A    208.80.155.9
 frmon-codfw     1H  IN A    208.80.152.235
 frmx1001        1H  IN A    208.80.155.15
