--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -37,10 +37,8 @@ $ORIGIN openstack.codfw1dev.wikimediacloud.org.
 ; neutron virtual router cloudinstances2b-gw
 cloudinstances2b-gw 5M  IN A      185.15.57.10
 
-ns0                 5M  IN A      208.80.153.43
-ns0                 5M  IN AAAA   2620:0:860:2:208:80:153:43
-ns1                 5M  IN A      208.80.153.44
-ns1                 5M  IN AAAA   2620:0:860:2:208:80:153:44
+ns0                 5M  IN CNAME  cloudservices2004-dev.wikimedia.org.
+ns1                 5M  IN CNAME  cloudservices2005-dev.wikimedia.org.
 ns-recursor0        5M  IN A      208.80.153.47
 ns-recursor0        5M  IN AAAA   2620:0:860:2:208:80:153:47
 ns-recursor1        5M  IN A      208.80.153.50
