Add temporary entry for ns2.openstack.eqiad1.wikimediacloud.org
Puppet needs to be able to determine the auth fqdn while
setting up a new node... once this host is up and stable,
I'll re-assign ns0 and ns1 and remove ns2.

Bug: 826352
Change-Id: I8fa9317e4e582c2f48f8f123db092df833ec71a9

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -78,6 +78,10 @@ ns0                 5M  IN A      208.80.154.135
 ns0                 5M  IN AAAA   2620:0:861:2:208:80:154:135
 ns1                 5M  IN A      208.80.154.11
 ns1                 5M  IN AAAA   2620:0:861:1:208:80:154:11
+
+; temporary entry while 1005 is being set up
+ns2                 5M  IN CNAME  cloudservices1005.wikimedia.org.
+
 ns-recursor0        5M  IN A      208.80.154.143
 ns-recursor0        5M  IN AAAA   2620:0:861:2:208:80:154:143
 ns-recursor1        5M  IN A      208.80.154.24
