--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -37,8 +37,11 @@ $ORIGIN openstack.codfw1dev.wikimediacloud.org.
 ; neutron virtual router cloudinstances2b-gw
 cloudinstances2b-gw 5M  IN A      185.15.57.10
 
-ns0                 5M  IN CNAME  cloudservices2004-dev.wikimedia.org.
-ns1                 5M  IN CNAME  cloudservices2005-dev.wikimedia.org.
+ns0                 5M  IN A      208.80.153.43
+ns0                 5M  IN AAAA   2620:0:860:2:208:80:153:43
+ns1                 5M  IN A      208.80.153.44
+ns1                 5M  IN AAAA   2620:0:860:2:208:80:153:44
+
 ns-recursor0        5M  IN A      208.80.153.47
 ns-recursor0        5M  IN AAAA   2620:0:860:2:208:80:153:47
 ns-recursor1        5M  IN A      208.80.153.50
@@ -74,8 +77,10 @@ $ORIGIN openstack.eqiad1.wikimediacloud.org.
 ; neutron virtual router cloudinstances2b-gw
 cloudinstances2b-gw 5M  IN A      185.15.56.238
 
-ns0                 5M  IN CNAME  cloudservices1005.wikimedia.org.
-ns1                 5M  IN CNAME  cloudservices1004.wikimedia.org.
+ns0                 5M  IN A      208.80.154.148
+ns0                 5M  IN AAAA   2620:0:861:2:208:80:154:148
+ns1                 5M  IN A      208.80.154.11
+ns1                 5M  IN AAAA   2620:0:861:1:208:80:154:11
 
 ns-recursor0        5M  IN A      208.80.154.143
 ns-recursor0        5M  IN AAAA   2620:0:861:2:208:80:154:143
