--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -48,6 +48,9 @@ spop2048._domainkey     1H IN TXT  "k=rsa; p=MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMII
 ; DMARC records http://dmarc.org/ -- policy none (monitor), for now
 _dmarc          1H  IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
 
+; Temporary text record to verify domain ownership, for Dmarcian account recovery (T316899)
+_dmarcian       1H  IN TXT "Tomki"
+
 ; Mail records for pr.wikimedia.org
 pr   1H IN MX 10 mx1001
 pr   1H IN MX 10 mx2001
