--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -436,6 +436,13 @@ piwik           1D IN CNAME dyna.wikimedia.org.
 ; policy.wikimedia.org was once on wordpress cluster T110203, then came back to WMF T310738
 policy           5M IN CNAME dyna.wikimedia.org.
 
+prometheus-eqiad 1H  IN CNAME dyna.wikimedia.org.
+prometheus-codfw 1H  IN CNAME dyna.wikimedia.org.
+prometheus-esams 1H  IN CNAME dyna.wikimedia.org.
+prometheus-ulsfo 1H  IN CNAME dyna.wikimedia.org.
+prometheus-eqsin 1H  IN CNAME dyna.wikimedia.org.
+prometheus-drmrs 1H  IN CNAME dyna.wikimedia.org.
+
 puppetboard      1D IN CNAME dyna.wikimedia.org.
 puppetboard-idptest 1D IN CNAME dyna.wikimedia.org.
 puppetboard-samltest 1D IN CNAME dyna.wikimedia.org.
