netbox: restore 1D TTL on the dyna CNAME
* This was a leftover after the migration to the dyna record.

Bug: T322700
Change-Id: Ie5bd0dc6c37cbae658749bc2d5eb28f17d0b3707

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -417,8 +417,8 @@ login           1D IN CNAME dyna.wikimedia.org.
 librenms        5M  IN CNAME    netmon1003
 
 ; TODO: Set the TTL to 1D after migration
-netbox          5M  IN CNAME    dyna.wikimedia.org.
-netbox-exports  5M  IN CNAME    dyna.wikimedia.org.
+netbox          1D  IN CNAME    dyna.wikimedia.org.
+netbox-exports  1D  IN CNAME    dyna.wikimedia.org.
 
 orchestrator    5M  IN CNAME    dborch1001
 
