--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -435,7 +435,7 @@ phabricator     1H  IN TXT      "v=spf1 mx ip6:2620:0:861:102:10:64:16:101 ip6:2
 
 login           1D IN CNAME dyna.wikimedia.org.
 
-librenms        5M  IN CNAME    netmon1003
+librenms        1H  IN CNAME    netmon1003
 
 ; TODO: Set the TTL to 1D after migration
 netbox          1D  IN CNAME    dyna.wikimedia.org.
