--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -91,8 +91,9 @@ email           1H  IN MX   10 reply.email.wikimedia.org.
 email           1H  IN MX   20 mail3880.wikimedia1.mkt4477.com.
 email           1H  IN TXT  "v=spf1 ip4:74.121.51.111 -all"
 www.email       1H  IN CNAME email.wikimedia.org.
-open.email      1H  IN CNAME open.mkt41.net.
-links.email     1H  IN CNAME recp.mkt41.net.
+open.email      1M  IN CNAME e7384e80868814ad.acs4.tc.
+links.email     1M  IN CNAME 9d14b5ea2f72945a.acs4.tc.
+content.email   1M  IN CNAME 9aa106a026bff032.acs4.tc.
 bounce.email    1H  IN A    52.3.180.22
 bounce.email    1H  IN MX   5 bounce.email.wikimedia.org.
 bounce.email    1H  IN TXT  "v=spf1 a ip4:74.121.51.111 -all"
@@ -101,6 +102,7 @@ reply.email     1H  IN MX   5 reply.email.wikimedia.org.
 reply.email     1H  IN TXT  "v=spf1 a ip4:74.121.51.111 -all"
 
 spop1024._domainkey.email   1H IN TXT "k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDkkVXsWmUfiM+mhp33gqUfjpRoe92/jR/DxHOH/5UEXu1/zfy1Niu23GOsOMiAclXdyG8CDR7cuikdYHZiAYry7crqkKkTWCPrt0YvTTVgS4aIPsfcR59FsTzy3tEpmETPOs31XgRRfXKzI591XsWCxLo6cSTjeHxo0tQGJWejMQIDAQAB"
+_c02d3189682d060e348d305b652c2ece.email 1M IN CNAME _d727f5c7066e58d1a23773f6b6ce9dc2.fmfdpfvvyn.acm-validations.aws.
 
 
 ; "dyna.wikimedia.org." is the focal point of CNAMEs across all our zones for
