add az.wikimedia.org for Azerbaijani Wikimedians User Group
Site URL: az.wikimedia.org has been requested for
the Azerbaijani Wikimedians User Group.

This is in line with other existing wikis for user groups.

That being said, see comment from Amir at T306015#7851237
how we don't create those anymore until affcom approves it.

In response to that the latest update is that Eldarado says
at T306015#8477791 they think the group is eligible.

Eldarado is interface-admin (temporary), bureaucrat, sysop on
az.wikipedia.org.

I am not entirely sure if we need more approval from
https://meta.wikimedia.org/wiki/Affiliations_Committee or are
good to go.

Please advise.

Bug: T306015
Change-Id: I8b4f2401171bad6406757e25fb460f10fdd21278

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -244,6 +244,7 @@ advisory.m          1D IN CNAME dyna.wikimedia.org.
 am.m                1D IN CNAME dyna.wikimedia.org.
 api.m               1D IN CNAME dyna.wikimedia.org.
 ar.m                1D IN CNAME dyna.wikimedia.org.
+az.m                1D IN CNAME dyna.wikimedia.org.
 bd.m                1D IN CNAME dyna.wikimedia.org.
 be.m                1D IN CNAME dyna.wikimedia.org.
 br.m                1D IN CNAME dyna.wikimedia.org.
@@ -521,6 +522,7 @@ am               1D IN CNAME dyna.wikimedia.org.
 api              1D IN CNAME dyna.wikimedia.org.
 auditcom         1D IN CNAME dyna.wikimedia.org.
 ar               1D IN CNAME dyna.wikimedia.org.
+az               1D IN CNAME dyna.wikimedia.org.
 bd               1D IN CNAME dyna.wikimedia.org.
 be               1D IN CNAME dyna.wikimedia.org.
 board            1D IN CNAME dyna.wikimedia.org.
