--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -396,12 +396,16 @@ gerrit-replica    300 IN A        208.80.153.104
 gerrit-replica    300 IN AAAA     2620:0:860:4:208:80:153:104
 
 git             1D IN CNAME dyna.wikimedia.org.
+
+; Gitlab records
+gitlab 300 IN TXT "v=spf1 include:wikimedia.org ~all"
 gitlab 300 IN A 208.80.154.145
 gitlab 300 IN AAAA 2620:0:861:2:208:80:154:145
 gitlab-replica-old 300 IN A 208.80.154.15
 gitlab-replica-old 300 IN AAAA 2620:0:861:1:208:80:154:15
 gitlab-replica 300 IN A 208.80.153.8
 gitlab-replica 300 IN AAAA 2620:0:860:1:208:80:153:8
+
 graphite        1D IN CNAME dyna.wikimedia.org.
 graphite-labs   1D IN CNAME dyna.wikimedia.org.
 grafana         1D IN CNAME dyna.wikimedia.org.
