utils: Add SPDX Apache-2.0 license to utils
Bug: T291323
Change-Id: I3a7de4a67b52f48b05966e571a2d978bae352c17

--- a/utils/mock_etc/geoip/README
+++ b/utils/mock_etc/geoip/README
@@ -1,4 +1,5 @@
 #!/usr/bin/perl -w
+# SPDX-License-Identifier: Apache-2.0
 
 # The 261-byte binary database in this directory is copied
 # directly from the upstream gdnsd project repo, where it has a
