Add mobile domain for ombuds.wm.o
An ombud want's to access ombuds.wm.o from their phone,
which currently isn't possible due to the missing dns
config.

Bug: T152882
Change-Id: Ic46951336e9fb10abeac177100c61f9dd6c01998

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -282,6 +282,7 @@ nostalgia.m         1D IN CNAME dyna.wikimedia.org.
 nyc.m               1D IN CNAME dyna.wikimedia.org.
 nz.m                1D IN CNAME dyna.wikimedia.org.
 office.m            1D IN CNAME dyna.wikimedia.org.
+ombuds.m            1D IN CNAME dyna.wikimedia.org.
 otrs-wiki.m         1D IN CNAME dyna.wikimedia.org.
 outreach.m          1D IN CNAME dyna.wikimedia.org.
 quality.m           1D IN CNAME dyna.wikimedia.org.
