add amical.wm.o for Amical Wikimedia wiki
As a recognized Wikimedia Thematic Organization they are
automatically eligible for a wiki per [1].

[1] - https://meta.wikimedia.org/wiki/Affiliations_Committee/Resolutions/Wikimedia_wiki's_policy

Bug: T330390
Change-Id: I63c87186a2c9283942208b491c32dc21a1006865

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -242,6 +242,7 @@ donate-lb.esams     1H IN MX 50    mx2001
 
 advisory.m          1D IN CNAME dyna.wikimedia.org.
 am.m                1D IN CNAME dyna.wikimedia.org.
+amical.m            1D IN CNAME dyna.wikimedia.org.
 api.m               1D IN CNAME dyna.wikimedia.org.
 ar.m                1D IN CNAME dyna.wikimedia.org.
 az.m                1D IN CNAME dyna.wikimedia.org.
@@ -521,6 +522,7 @@ advisors         1D IN CNAME dyna.wikimedia.org.
 advisory         1D IN CNAME dyna.wikimedia.org.
 affcom           1D IN CNAME dyna.wikimedia.org.
 am               1D IN CNAME dyna.wikimedia.org.
+amical           1D IN CNAME dyna.wikimedia.org.
 api              1D IN CNAME dyna.wikimedia.org.
 auditcom         1D IN CNAME dyna.wikimedia.org.
 ar               1D IN CNAME dyna.wikimedia.org.
