--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -132,8 +132,13 @@ _domainkey.lists        1H  IN TXT  "o=~; r=postmaster@wikimedia.org;"
 _adsp._domainkey.lists  1H  IN TXT  "dkim=unknown;"
 wikimedia._domainkey.lists  1H  IN TXT  "v=DKIM1; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7iVvYIGUbjtvFcLTUuN9Lsc1w17f8QHc01BxIr6jHJUMAMyxHSchdU6Il/hX1Or3JyOfdBi35SGqotI3G86xxQE7PZD7u+EediP5uhRTn+opv+nX5hEuxlnty8mPXem0DHhfSL0+3Ciu5WD0mNATb4NwC9jQjy2FzaLHn9D44PwIDAQAB"
 
+; Debugging tools
+reflect-edns 10 IN DYNA reflect!edns ; Returns explicit EDNS-Client-Subnet, or all-zeros if not present
+reflect-dns  10 IN DYNA reflect!dns  ; Returns the recursor exit IP only, ignores EDNS-Client-Subnet
+reflect-both 10 IN DYNA reflect!both ; Returns both of the above together in one response (if no ednsc, returns just 1 record)
+reflect      10 IN DYNA reflect ; GeoDNS debugging - returns best of either above, like real geoip resolution does
+
 ; Geodynamic records
-reflect      10 IN DYNA reflect ; GeoDNS debugging
 text-lb     1D IN CNAME dyna.wikimedia.org.
 ncredir-lb  600 IN DYNA geoip!ncredir-addrs
 upload      600 IN DYNA geoip!upload-addrs
