--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -242,6 +242,14 @@ donate-lb.esams     1H IN AAAA 2620:0:862:ed1a::1 ; same IP of text-lb
 donate-lb.esams     1H IN MX 10    mx1001
 donate-lb.esams     1H IN MX 50    mx2001
 
+; GeoIP Mappings (T332025)
+measure-eqiad       1D IN CNAME upload-lb.eqiad.wikimedia.org.
+measure-codfw       1D IN CNAME upload-lb.codfw.wikimedia.org.
+measure-esams       1D IN CNAME upload-lb.esams.wikimedia.org.
+measure-ulsfo       1D IN CNAME upload-lb.ulsfo.wikimedia.org.
+measure-eqsin       1D IN CNAME upload-lb.eqsin.wikimedia.org.
+measure-drmrs       1D IN CNAME upload-lb.drmrs.wikimedia.org.
+
 
 ; Mobile
 
