--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -691,6 +691,7 @@ netbox-next      1D IN CNAME dyna.wikimedia.org.
 noc              1D IN CNAME dyna.wikimedia.org.
 old-bugzilla     1D IN CNAME dyna.wikimedia.org.
 one              1H IN CNAME messaging-wikimedia-org.go-vip.net.
+payments-listener.frdev 1H IN CNAME frdev-eqiad
 planet           1D IN CNAME dyna.wikimedia.org.
 ar.planet        1D IN CNAME dyna.wikimedia.org.
 bg.planet        1D IN CNAME dyna.wikimedia.org.
