--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -408,8 +408,11 @@ frmon.frdev     1H  IN CNAME    frmon-eqiad
 
 gerrit        300 IN A        208.80.154.137
 gerrit        300 IN AAAA     2620:0:861:2:208:80:154:137
+gerrit-new        300 IN A        208.80.154.151
+gerrit-new        300 IN AAAA     2620:0:861:2:208:80:154:151
 gerrit-replica    300 IN A        208.80.153.104
 gerrit-replica    300 IN AAAA     2620:0:860:4:208:80:153:104
+
 
 git             1D IN CNAME dyna.wikimedia.org.
 
