--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -170,6 +170,7 @@ frack-default-nat-eqiad     1H  IN A    208.80.155.6
 frack-payments-nat-codfw    1H  IN A    208.80.152.229
 frack-payments-nat-eqiad    1H  IN A    208.80.155.7
 frbast-eqiad    1H  IN A    208.80.155.8
+frbast-new-eqiad    1H  IN A    208.80.155.18
 frbast-codfw    1H  IN A    208.80.152.231
 frdata-eqiad    1H  IN A    208.80.155.16
 frdata-codfw    1H  IN A    208.80.152.237
@@ -480,6 +481,7 @@ payments-codfw  1H  IN A        208.80.152.228
 payments-staging 1H  IN A        208.80.155.10
 
 payments-listener-eqiad 1H  IN A    208.80.155.12
+payments-listener-new-eqiad 1H  IN A    208.80.155.19
 payments-listener-codfw 1H  IN A    208.80.152.233
 payments-listener       5M  IN CNAME        payments-listener-eqiad
 
