--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -402,7 +402,7 @@ ldap-labs.codfw 1H  IN CNAME    serpens
 ldap-rw.eqiad   1H  IN CNAME    seaborgium
 ldap-rw.codfw   1H  IN CNAME    serpens
 
-frbast          1H  IN CNAME    frbast-eqiad
+frbast          1H  IN CNAME    frbast-new-eqiad
 frdata          1H  IN CNAME    frdata-eqiad
 frmon           1H  IN CNAME    frmon-eqiad
 frmon.frdev     1H  IN CNAME    frmon-eqiad
