Add dns for new frack codfw bastion
Bug: T334505
Change-Id: I58115d3ad9dcbf2c22149951b1dcb3abcf216bef

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -172,6 +172,7 @@ frack-payments-nat-eqiad    1H  IN A    208.80.155.7
 frbast-eqiad    1H  IN A    208.80.155.8
 frbast-new-eqiad    1H  IN A    208.80.155.18
 frbast-codfw    1H  IN A    208.80.152.231
+frbast-new-codfw    1H  IN A    208.80.152.234
 frdata-eqiad    1H  IN A    208.80.155.16
 frdata-codfw    1H  IN A    208.80.152.237
 frdev-eqiad     1H  IN A    208.80.155.13
