update codfw1dev rabbitmq01 cname for new cloudcontrol2001-dev
Bug: T336236
Change-Id: I7a694693ef4b76742f7cdb26a09a34bda2b58604

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -22,7 +22,7 @@ $ORIGIN codfw1dev.wikimediacloud.org.
 ; Primary openstack endpoint API used by openstack clients and endpoint catalog
 openstack  5M  IN CNAME  cloudcontrol2005-dev.wikimedia.org.
 ; Rabbitmq nodes
-rabbitmq01 5M  IN CNAME  cloudcontrol2001-dev.wikimedia.org.
+rabbitmq01 5M  IN CNAME  cloudcontrol2001-dev.codfw.wmnet.
 rabbitmq02 5M  IN CNAME  cloudcontrol2004-dev.wikimedia.org.
 rabbitmq03 5M  IN CNAME  cloudcontrol2005-dev.wikimedia.org.
 
