--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -20,7 +20,7 @@ $ORIGIN codfw1dev.wikimediacloud.org.
 
 ; Service aliases
 ; Primary openstack endpoint API used by openstack clients and endpoint catalog
-openstack  5M  IN CNAME  cloudcontrol2005-dev.wikimedia.org.
+openstack           5M  IN A      185.15.57.24
 ; Rabbitmq nodes
 rabbitmq01 5M  IN CNAME  cloudcontrol2001-dev.codfw.wmnet.
 rabbitmq02 5M  IN CNAME  cloudcontrol2004-dev.wikimedia.org.
