--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -22,9 +22,9 @@ $ORIGIN codfw1dev.wikimediacloud.org.
 ; Primary openstack endpoint API used by openstack clients and endpoint catalog
 openstack           5M  IN A      185.15.57.24
 ; Rabbitmq nodes
-rabbitmq01 5M  IN CNAME  cloudcontrol2001-dev.codfw.wmnet.
-rabbitmq02 5M  IN CNAME  cloudcontrol2004-dev.wikimedia.org.
-rabbitmq03 5M  IN CNAME  cloudcontrol2005-dev.wikimedia.org.
+rabbitmq01 5M  IN CNAME  cloudcontrol2001-dev.private.codfw.wikimedia.cloud.
+rabbitmq02 5M  IN CNAME  cloudcontrol2004-dev.private.codfw.wikimedia.cloud.
+rabbitmq03 5M  IN CNAME  cloudcontrol2005-dev.private.codfw.wikimedia.cloud.
 
 nat.cloudgw         5M  IN A      185.15.57.1
 cloudgw2003-dev     5M  IN A      208.80.153.188
