add app.dev.learn.wiki pointing to AWS
As requested on ticket, create another name that
points to the same existing IP on AWS.

Bug: T338280
Change-Id: I5e26323075e1d60002db3296f3baaf77b18d48fd

--- a/templates/learn.wiki
+++ b/templates/learn.wiki
@@ -36,6 +36,8 @@ tulpi7swkxlvoep2v4xdmenctf7zojbw._domainkey 5M  IN CNAME    tulpi7swkxlvoep2v4xd
 dev         1H  IN A    52.44.207.59
 studio.dev  1H  IN A    52.44.207.59
 preview.dev 1H  IN A    52.44.207.59
+app.dev     1H  IN A    52.44.207.59
+
 ; https://phabricator.wikimedia.org/T292537
 forum.dev   1H  IN A    52.44.207.59
 
