--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -37,6 +37,8 @@ $ORIGIN openstack.codfw1dev.wikimediacloud.org.
 ; neutron virtual router cloudinstances2b-gw
 cloudinstances2b-gw 5M  IN A      185.15.57.10
 
+; TODO: these should eventually go away when we are kind of sure that
+; nobody is caching the NS entries pointing to them
 ns0                 5M  IN A      208.80.153.43
 ns0                 5M  IN AAAA   2620:0:860:2:208:80:153:43
 ns1                 5M  IN A      208.80.153.44
@@ -46,6 +48,10 @@ ns-recursor0        5M  IN A      208.80.153.47
 ns-recursor0        5M  IN AAAA   2620:0:860:2:208:80:153:47
 ns-recursor1        5M  IN A      208.80.153.50
 ns-recursor1        5M  IN AAAA   2620:0:860:2:208:80:153:50
+
+; DNS servers by openstack designate. These addresses are BGP anycast VIPs
+ns                  5M  IN A      185.15.57.25
+ns-recursor         5M  IN A      172.20.254.1
 
 ;
 ; EQIAD
