--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -37,8 +37,9 @@ $ORIGIN openstack.codfw1dev.wikimediacloud.org.
 ; neutron virtual router cloudinstances2b-gw
 cloudinstances2b-gw 5M  IN A      185.15.57.10
 
-; TODO: these should eventually go away when we are kind of sure that
-; nobody is caching the NS entries pointing to them
+; TODO: this 'ns' should eventually go away when we are kind of sure that
+; nobody is caching the NS entries pointing to it
+ns                  5M  IN A      185.15.57.25  ; wmf-zone-validator-ignore=TOO_MANY_PUBLIC_NAMES,TOO_MANY_NAMES
 ns0                 5M  IN A      185.15.57.25
 ns1                 5M  IN A      208.80.153.44
 
