wikimediacloud.org: cleanup for ns.openstack.codfw1dev.wikimediacloud.org
We no longer need this record.

While at it, add some clarification comments.

Bug: T307357
Signed-off-by: Arturo Borrero Gonzalez <aborrero@wikimedia.org>
Change-Id: I11fdb49f3cddbda8c8ecd36f427840f01019ffe9

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -37,11 +37,10 @@ $ORIGIN openstack.codfw1dev.wikimediacloud.org.
 ; neutron virtual router cloudinstances2b-gw
 cloudinstances2b-gw 5M  IN A      185.15.57.10
 
-; TODO: this 'ns' should eventually go away when we are kind of sure that
-; nobody is caching the NS entries pointing to it
-ns                  5M  IN A      185.15.57.25  ; wmf-zone-validator-ignore=TOO_MANY_PUBLIC_NAMES,TOO_MANY_NAMES
+; primary servers. These are BGP addresses announced by a single host
 ns0                 5M  IN A      185.15.57.25
 ns1                 5M  IN A      208.80.153.44
+
 ; DNS servers by openstack designate. These addresses are BGP anycast VIPs
 ns-recursor         5M  IN A      172.20.254.1
 
