learn.wiki: update DNS records
Bug: T339942
Change-Id: I44b41e0c9c38ee4dc446719ce71d6eea39d483d0

--- a/templates/learn.wiki
+++ b/templates/learn.wiki
@@ -43,15 +43,19 @@ forum.dev   1H  IN A    52.44.207.59
 
 ; LB DNS entries
 ; https://phabricator.wikimedia.org/T290025
-stage           1H  IN CNAME    wkm-stage-alb-1830818829.us-east-1.elb.amazonaws.com.
-studio.stage    1H  IN CNAME    wkm-stage-alb-1830818829.us-east-1.elb.amazonaws.com.
-preview.stage   1H  IN CNAME    wkm-stage-alb-1830818829.us-east-1.elb.amazonaws.com.
+; Updates in https://phabricator.wikimedia.org/T339942
+stage           1H  IN CNAME    wkm-maple-stage-alb-202853407.us-east-1.elb.amazonaws.com.
+studio.stage    1H  IN CNAME    wkm-maple-stage-alb-202853407.us-east-1.elb.amazonaws.com.
+preview.stage   1H  IN CNAME    wkm-maple-stage-alb-202853407.us-east-1.elb.amazonaws.com.
 ; https://phabricator.wikimedia.org/T290974
 studio          1H  IN CNAME    wkm-prod-alb-30644061.us-east-1.elb.amazonaws.com.
 preview         1H  IN CNAME    wkm-prod-alb-30644061.us-east-1.elb.amazonaws.com.
 ; https://phabricator.wikimedia.org/T292537
 forum           1H  IN CNAME    wkm-prod-alb-30644061.us-east-1.elb.amazonaws.com.
-forum.stage     1H  IN CNAME    wkm-stage-alb-1830818829.us-east-1.elb.amazonaws.com.
+forum.stage     1H  IN CNAME    wkm-maple-stage-alb-202853407.us-east-1.elb.amazonaws.com.
+
+; https://phabricator.wikimedia.org/T339942
+app.stage       1H  IN CNAME    wkm-maple-stage-alb-202853407.us-east-1.elb.amazonaws.com.
 
 
 ; CA validation
