Shift fundraising/frdata service cnames back to codfw.
Bug: T335446
Change-Id: I09377eaf1ce9c895b46caa0250ff18a8e5d1d9f5

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -394,7 +394,7 @@ docs            1D IN CNAME dyna.wikimedia.org.
 
 dispatch        5M  IN CNAME    alert1001
 
-donorpreferences    1H  IN CNAME    frdata-codfw
+donorpreferences    1H  IN CNAME    frdata-eqiad
 
 helm-charts     1D IN CNAME dyna.wikimedia.org.
 
@@ -404,7 +404,7 @@ ldap-rw.eqiad   1H  IN CNAME    seaborgium
 ldap-rw.codfw   1H  IN CNAME    serpens
 
 frbast          1H  IN CNAME    frbast-eqiad
-frdata          1H  IN CNAME    frdata-codfw
+frdata          1H  IN CNAME    frdata-eqiad
 frmon           1H  IN CNAME    frmon-eqiad
 frmon.frdev     1H  IN CNAME    frmon-eqiad
 
@@ -678,8 +678,8 @@ datasets         1D IN CNAME dyna.wikimedia.org.
 diff             1H IN CNAME blog-wikimedia-org.go-vip.net.
 download         1D IN CNAME dyna.wikimedia.org.
 etherpad         1D IN CNAME dyna.wikimedia.org.
-fundraising      1H  IN CNAME    frdata-codfw
-fundraising.frdev   1H  IN CNAME    frdata-codfw
+fundraising      1H  IN CNAME    frdata-eqiad
+fundraising.frdev   1H  IN CNAME    frdata-eqiad
 hue              1D IN CNAME dyna.wikimedia.org.
 iegreview        1D IN CNAME dyna.wikimedia.org.
 jobs             1D IN CNAME dyna.wikimedia.org.
