--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -218,6 +218,7 @@ cxserver            1D IN CNAME dyna.wikimedia.org.
 
 ; ORES
 ores                1D IN CNAME dyna.wikimedia.org.
+ores-legacy         1D IN CNAME dyna.wikimedia.org.
 
 ; blubberoid
 blubberoid          1D IN CNAME dyna.wikimedia.org.
