--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -11,6 +11,10 @@
 @           600 IN CAA 0 issue "letsencrypt.org"
 @           600 IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
 
+; See https://wikitech.wikimedia.org/wiki/DNS/Netbox
+$INCLUDE netbox/wikimediacloud.org-eqiad
+$INCLUDE netbox/wikimediacloud.org-codfw
+
 ;
 ; CODFW
 ; codfw1dev openstack region
@@ -18,32 +22,15 @@
 
 $ORIGIN codfw1dev.wikimediacloud.org.
 
-; Service aliases
-; Primary openstack endpoint API used by openstack clients and endpoint catalog
-openstack           5M  IN A      185.15.57.24
 ; Rabbitmq nodes
 rabbitmq01 5M  IN CNAME  cloudcontrol2001-dev.private.codfw.wikimedia.cloud.
 rabbitmq02 5M  IN CNAME  cloudcontrol2004-dev.private.codfw.wikimedia.cloud.
 rabbitmq03 5M  IN CNAME  cloudcontrol2005-dev.private.codfw.wikimedia.cloud.
 
 nat.cloudgw         5M  IN A      185.15.57.1
-cloudgw2003-dev     5M  IN A      208.80.153.188
-cloudgw2002-dev     5M  IN A      208.80.153.189
-wan.cloudgw         5M  IN A      208.80.153.190
 virt.cloudgw        5M  IN A      185.15.57.9
 
 $ORIGIN openstack.codfw1dev.wikimediacloud.org.
-
-; neutron virtual router cloudinstances2b-gw
-cloudinstances2b-gw 5M  IN A      185.15.57.10
-
-; primary servers. These are BGP addresses announced by a single host
-ns0                 5M  IN A      185.15.57.25
-ns1                 5M  IN A      185.15.57.26
-
-; DNS servers by openstack designate. These addresses are BGP anycast VIPs
-ns-recursor         5M  IN A      172.20.254.1
-
 ;
 ; EQIAD
 ; eqiad1 openstack region
@@ -60,19 +47,8 @@ rabbitmq02 5M  IN CNAME  cloudrabbit1002.wikimedia.org.
 rabbitmq03 5M  IN CNAME  cloudrabbit1003.wikimedia.org.
 
 nat.cloudgw         5M  IN A      185.15.56.1
-virt.cloudgw        5M  IN A      185.15.56.237
-
-vrrp-gw-1120               5M IN A 185.15.56.241
-irb-1120.cloudsw1-c8-eqiad 5M IN A 185.15.56.242
-irb-1120.cloudsw1-d5-eqiad 5M IN A 185.15.56.243
-wan.cloudgw         5M  IN A      185.15.56.244
-cloudgw1001         5M  IN A      185.15.56.245
-cloudgw1002         5M  IN A      185.15.56.246
 
 $ORIGIN openstack.eqiad1.wikimediacloud.org.
-
-; neutron virtual router cloudinstances2b-gw
-cloudinstances2b-gw 5M  IN A      185.15.56.238
 
 ns0                 5M  IN A      208.80.154.148
 ns1                 5M  IN A      208.80.154.11
