templates: dummy commit to test new DNS boxes
Change-Id: I83cdc2c3b0616a6762809ec9f72f9d00a6f4176e

--- a/templates/wikimedia-dns.org
+++ b/templates/wikimedia-dns.org
@@ -32,7 +32,7 @@
 @           600 IN A    185.71.138.138
 @           600 IN AAAA 2001:67c:930::1
 
-; Wikidough check (durum). Anycast.
+; Wikidough check service (durum). Anycast.
 ;
 ; landing page
 check       600 IN A    185.71.138.139
