wikimedia.org: update glue record for ns2
This is a temporary move to point ns2 to nsa.wikimedia.org
(198.35.27.27), so that we perform the esams->knams migration during
which esams and dns300[1-2] won't be reachable.

Doing this will send ns2 traffic to all the DNS boxes, as we announce
198.35.27.0/24 from all sites.

Bug: T343942
Change-Id: Ib0a5562a0ef2f1fc1c89f9a01f11aa901eeb7766

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -9,7 +9,7 @@
 @           1D  IN NS   ns2
 ns0         1D  IN A    208.80.154.238
 ns1         1D  IN A    208.80.153.231
-ns2         1D  IN A    91.198.174.239
+ns2         1D  IN A    198.35.27.27 ; temporary, knams migration (T343942)
 nsa         1H  IN A    198.35.27.27 ; anycast authdns is awesome
 
 ; Mail exchangers
