--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -24,7 +24,7 @@ nsa         1H  IN A    198.35.27.27 ; anycast authdns is awesome
 @           600 IN TXT  "google-site-verification=APNaeC69s87mS4z-sfYqFYONgimBx4Bw22eCIaYEd_g"
 
 ; SPF txt and rr records
-@               600 IN TXT  "v=spf1 ip4:91.198.174.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
+@               600 IN TXT  "v=spf1 ip4:185.15.59.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
 @               600 IN TXT  "FC0MOB7SKLHj0AsevTnJvE0W0YYQkPVYOX3UMrINOSk="
 @               600 IN TXT  "MS=ms70322281"
 
@@ -149,7 +149,7 @@ m           1D IN CNAME dyna.wikimedia.org.
 donate      600 IN DYNA geoip!text-addrs
 donate          1H  IN MX       10 mx1001
 donate          1H  IN MX       50 mx2001
-donate          5M  IN TXT  "v=spf1 ip4:91.198.174.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
+donate          5M  IN TXT  "v=spf1 ip4:185.15.59.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
 _dmarc.donate   1H  IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc@donate.wikimedia.org; ruf=mailto:dmarc@donate.wikimedia.org;"
 
 ; Servers (alphabetic order) << WHAT PART ABOUT THIS IS SO HARD TO UNDERSTAND?
@@ -239,8 +239,8 @@ donate-lb.codfw     1H IN A 208.80.153.224
 donate-lb.codfw     1H IN AAAA 2620:0:860:ed1a::1
 
 ;;; esams (only records not auto-generated from Netbox)
-donate-lb.esams     1H IN A 91.198.174.192 ; same IP of text-lb
-donate-lb.esams     1H IN AAAA 2620:0:862:ed1a::1 ; same IP of text-lb
+donate-lb.esams     1H IN A 185.15.59.224 ; same IP of text-lb
+donate-lb.esams     1H IN AAAA 2a02:ec80:300:ed1a::1 ; same IP of text-lb
 donate-lb.esams     1H IN MX 10    mx1001
 donate-lb.esams     1H IN MX 50    mx2001
 
