Lower ores.wikimedia.org's TTL to 5M
This is a preparation step before setting a CNAME to
ores-legacy.wikimedia.org. The ML team wants to be
able to roll back promptly in case the move turns
out to cause problems to clients.

Bug: T341696
Change-Id: I556dc16e416c6138cd9d960589421abb6ba22701

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -215,7 +215,7 @@ donate-lb.eqiad     1H IN MX 50 mx2001
 cxserver            1D IN CNAME dyna.wikimedia.org.
 
 ; ORES
-ores                1D IN CNAME dyna.wikimedia.org.
+ores                5M IN CNAME dyna.wikimedia.org.
 ores-legacy         1D IN CNAME dyna.wikimedia.org.
 
 ; blubberoid
