pyrra: add public dns entries
Bug: T302995
Change-Id: If265e8aaa4b46261e69bd21f11ec5334e5b9ae95

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -501,6 +501,10 @@ puppetboard      1D IN CNAME dyna.wikimedia.org.
 puppetboard-idptest 1D IN CNAME dyna.wikimedia.org.
 puppetboard-samltest 1D IN CNAME dyna.wikimedia.org.
 
+pyrra            1H IN CNAME dyna.wikimedia.org.
+slo              1H IN CNAME dyna.wikimedia.org.
+slos             1H IN CNAME dyna.wikimedia.org.
+
 releases         1D IN CNAME dyna.wikimedia.org.
 releases-jenkins 1D IN CNAME dyna.wikimedia.org.
 
